# MLR_labb-2

./: .gitignore  README.md  check_env.py  dataset.py  evaluations.py  experiments.ipynb  main.py  model.py  pyproject.toml  train.py
eda/: eda.ipynb
experimetns_models/: cifar_1.pth  cifar_2.pth  cifar_3.pth
